플랫폼 리펙토링

--- a/src/main/resources/templates/platform/layout/popup/index.html
+++ b/src/main/resources/templates/platform/layout/popup/index.html
@@ -52,5 +52,8 @@
 	<!-- Bottom start -->
 	<th:block th:replace="platform/layout/popup/fragments/bottom"></th:block>		
 	<!-- Bottom end -->
+	<!-- Common javascript functions -->
+	<th:block th:replace="platform/layout/common/fragments/common_func_js"></th:block>
+	<!-- Common javascript functions -->	
 </body>
 </html>
