--- a/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="four wide field">
 			<div id="BTN_search" class="ui teal button"><i class="search icon"></i> Search</div>
-			<div class="ui button" onclick="document.location.reload()"><i class="undo icon"></i> Reset</div>
+			<div class="ui button" onclick="document.location.href = window.location.pathname"><i class="undo icon"></i> Reset</div>
 		</div>
 	</div>
 </div>
