--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/product/main.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/product/main.html
@@ -11,7 +11,7 @@
 	<div class="block-button-area">
 		<button id="BTN_search" th:text="#{EUP_B_0002}"></button>	<!-- Search -->
 		<div class="split"></div>
-		<button onclick="document.location.reload()" th:text="#{EUP_B_0017}"></button>		<!-- Reset -->
+		<button onclick="document.location.href = window.location.pathname" th:text="#{EUP_B_0017}"></button>		<!-- Reset -->
 		<div class="split"></div>
 		<button id="BTN_cart" th:text="#{EUP_B_0018}"></button>		<!-- Cart -->
 	</div>
