--- a/src/main/resources/templates/platform/layout/common/index.html
+++ b/src/main/resources/templates/platform/layout/common/index.html
@@ -49,6 +49,9 @@
 	<!-- Body end -->
 	<!-- Bottom start -->
 	<th:block th:replace="platform/layout/common/fragments/bottom"></th:block>		
-	<!-- Bottom end -->	
+	<!-- Bottom end -->
+	<!-- Common javascript functions -->
+	<th:block th:replace="platform/layout/common/fragments/common_func_js"></th:block>
+	<!-- Common javascript functions -->
 </body>
 </html>
