--- a/src/main/resources/templates/portal/iv/board/write.html
+++ b/src/main/resources/templates/portal/iv/board/write.html
@@ -293,8 +293,8 @@ let xfe = new XFE({
 	},
 	language: "english",
 	initFontFamily: "Arial",
-	uploadFilePath: "/portal/iv/xfree/editor_upload"
-	//uploadPasteContentsPath: "/portal/iv/xfree/editor_upload_contents"	
+	uploadFilePath: "/portal/iv/xfree/image/upload",
+	uploadPasteContentsPath: "/portal/iv/xfree/upload"
 });
 	
 xfe.render("xfe");
