--- a/src/main/resources/templates/platform/mgmt/content/popup/view.html
+++ b/src/main/resources/templates/platform/mgmt/content/popup/view.html
@@ -6,7 +6,7 @@
 <th:block layout:fragment="content">
 <script>
 //팝업 Title
-const POPUP_TITLE = "User Group";
+const POPUP_TITLE = "Contents";
 </script>
 	<th:block th:replace="/platform/mgmt/content/view_inc"></th:block>
 </th:block>
