User Management 페이징 오류 수정

--- a/src/main/resources/templates/platform/mgmt/user/list.html
+++ b/src/main/resources/templates/platform/mgmt/user/list.html
@@ -985,6 +985,9 @@ function doSearch(pageNumber)
 {
 	$("#pageNumber").val(JpUtilsString.defaultString(pageNumber, "1"));
 	$("#rowPerPage").val(JpUtilsString.defaultString($(".pagination-rowPerPage").val(), GLOBAL_CONST.ROW_PER_PAGE));
+	
+	$("input[name=uSeq]").val("");
+	$("input[name=cSeq]").val("");
 
 	userTable.load();
 };
