EP_UPLOAD_FILE_

--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
@@ -165,7 +165,7 @@ input {
 	border: 1px solid rgba(0, 48, 129, 0.2);
 }
 .logout-button:hover {
-	background: #f8fffd;
+	background: #ECECEC;
 }
 .order-button {
 	padding: 5px 15px;
