--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
@@ -188,7 +188,7 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 	border: 1px solid rgba(0, 48, 129, 0.2);
 }
 .logout-button:hover {
-	background: #f8fffd;
+	background: #ECECEC;
 }
 
 /*--- 여백 과 flex ------------------*/
