프로모션 개발

--- a/src/main/resources/static/portal/slick/slick-theme.css
+++ b/src/main/resources/static/portal/slick/slick-theme.css
@@ -2,7 +2,8 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+    /* background: #fff url('./ajax-loader.gif') center center no-repeat; */
+    background: #fff url('/portal/img/common/loading.gif') center center no-repeat; 
 }
 
 /* Icons */
