--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
@@ -535,7 +535,8 @@ input.custom-ui[type="radio"] {
   margin-left: 1px;
   overflow: hidden;
   padding: 0;
-  position: absolute;
+  /*position: absolute;*/
+  position: relative;
   width: 18px;
   height: 18px;
   opacity: 0;
@@ -556,7 +557,8 @@ input.custom-ui[type="checkbox"] + label,
 input.custom-ui[type="radio"] + label {
   line-height: 26px;
   position: relative;
-  padding-left: 26px;
+  /*padding-left: 26px;*/
+  padding-left: 8px;
   font-weight: normal;
 }
 input.custom-ui[type="checkbox"] + label:before, input.custom-ui[type="checkbox"] + label:after,
@@ -566,7 +568,8 @@ input.custom-ui[type="radio"] + label:after {
   position: absolute;
   content: '';
   display: block;
-  left: 0;
+  /*left: 0;*/
+  left: -18px;
 }
 input.custom-ui[type="checkbox"] + label:before,
 input.custom-ui[type="radio"] + label:before {
@@ -583,7 +586,7 @@ input.custom-ui[type="checkbox"] + label:after,
 input.custom-ui[type="radio"] + label:after {
   background-color: #fff;
   top: 50%;
-  left: 0px;
+  /*left: 0px;*/
   width: 8px;
   height: 8px;
   margin-top: -9px;
@@ -602,7 +605,8 @@ input.custom-ui[type="radio"] + label:before, input.custom-ui[type="radio"] + la
 input.custom-ui[type="checkbox"] + label:after {
   background-color: transparent;
   top: 50%;
-  left: 4px;
+  /*left: 4px;*/
+  left: -14px;
   width: 7px;
   height: 4px;
   margin-top: -5px;
