--- a/src/main/resources/templates/portal/layout/iv/eu/parts/common/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/eu/parts/common/fragments/js.html
@@ -1,4 +1,4 @@
-<!--script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fileDownload/1.4.2/jquery.fileDownload.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
@@ -10,8 +10,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/min/dropzone.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-<script th:src="@{/portal/js/jquery/jquery.bxslider.js}"></script-->
+<script th:src="@{/portal/js/jquery/jquery.bxslider.js}"></script>
 
+<!--/* CDN 사용 불가 경우 대비. 주석 제거하고 사용.
 <script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
 <script th:src="@{/portal/js/jquery-ui/jquery-ui.min.js}"></script>
 <script th:src="@{/portal/js/jquery/jquery.cookie.js}"></script>
@@ -25,6 +26,7 @@
 <script th:src="@{/portal/js/d3/c3.min.js}"></script>
 <script th:src="@{/portal/js/dropzone/dropzone.min.js}"></script>
 <script th:src="@{/portal/js/jquery/jquery.bxslider.js}"></script>
+*/-->
 
 <!-- custom javascript library -->
 <script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
