--- a/src/main/resources/templates/portal/iv/hq/parts/promotion/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/promotion/view.html
@@ -27,6 +27,7 @@
 	<input type="hidden" name="fromRegDate" th:value="*{fromRegDate}"/>
 	<input type="hidden" name="toRegDate" th:value="*{toRegDate}"/>
 	<input type="hidden" name="pageNumber" th:value="*{pageNumber}"/>
+	<input type="hidden" name="state" th:value="*{state}"/>
 	<table class="condition table-fixed">
 		<tbody>
 			<tr>
