--- a/src/main/resources/templates/portal/iv/hq/parts/promotion/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/promotion/write.html
@@ -170,6 +170,7 @@ body {
 	<input type="hidden" name="fromRegDate" th:value="${fromRegDate}"/>
 	<input type="hidden" name="toRegDate" th:value="${toRegDate}"/>
 	<input type="hidden" name="pageNumber" th:value="${pageNumber}"/>
+	<input type="hidden" name="state" th:value="${state}"/>
 	</form>
 <script>
 $(function(){
